add search users in project method GET /api/projects/{projectID}/users
