# swagger.json
@@ -275,6 +275,54 @@
         }
       }
     },
+    "/projects/{projectId}/users":{
+      "get": {
+        "tags": [
+          "Project",
+          "User"
+        ],
+        "summary": "Get Project Users",
+        "description": "return project boards",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "projectId",
+            "in": "path",
+            "description": "ID of project that needs to be fetched",
+            "required": true,
+            "type": "integer",
+            "maximum": 10,
+            "minimum": 1,
+            "format": "int64"
+          },
+          {
+            "name": "email",
+            "in": "query",
+            "description": "email of searched user",
+            "required": true,
+            "type": "string",
+            "format": "email"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "$ref": "#/definitions/User"
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid status value"
+          }
+        }
+      }
+    },
     "/boards": {
       "post": {
         "tags": [
